trunk/Archive2/17/8b7e1718a51d59/output
main.cpp:11:48: error: calling a private constructor of class 'S'
    std::cout << "Size of S::foo = " << sizeof(S{}.foo);
                                               ^
main.cpp:7:5: note: declared private here
    S();
    ^
1 error generated.
